add digit section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </section>
 
-    <section class="founder">
+    <section class="founder wrapper-2">
         <h3 class="founder__company">ОСНОВАТЕЛЬ КОМПАНИИ</h3>
         <div class="founder__wr-img">
             <img class="founder__img" src="./img/director/founder.jpg" alt="photo-michail">
@@ -99,6 +99,130 @@
             Корма, Климат, Кадры, Комфорт»
         </h3>
         <p class="founder__info"><span>Основатель и генеральный директор</span>группы компаний ВМТ, Рамос, Бюро Александра Германа. Первый консультант из СНГ приглашенный на Европейские фермы в качестве консультанта, ТОПовый консультант в России по содержанию КРС. Эксперт Института Молока. Более 200 публичных выступлений на тему содержания КРС и повышению надоев.</p>
+    </section>
+
+    <section class="digit wrapper-2">
+        <div class="digit__items">
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d3.png" alt="digit_info">
+                <p class="digit__title">Окупаемость 400% годовых</p>
+                <p class="digit__info">Ежемесячная экономия от 1 000 000 рублей</p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d2.png" alt="digit_info">
+                <p class="digit__title">Решение за 7 дней</p>
+                <p class="digit__info">за 7 дней полностью избавим от проблемы</p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d1.png" alt="digit_info">
+                <p class="digit__title">в 3-4 раза Дешевле аналогов</p>
+                <p class="digit__info">по сравнениею с антискользящими ковриками</p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d3.png" alt="digit_info">
+                <p class="digit__title">Запатентованные технологии</p>
+                <p class="digit__info">
+                    40 % наших технологических решений
+                    уникальны, 60 % — адаптированы на
+                    основе мирового опыта ведущих американских,
+                    канадских и европейских компаний
+                </p>
+            </div>
+
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d6.png" alt="digit_info">
+                <p class="digit__title">Первые лица на наших
+                    объектах</p>
+                <p class="digit__info">
+                    Первые лица приезжают
+                    принимать наши объекты
+                </p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d7.png" alt="digit_info">
+                <p class="digit__title">
+                    Нас рекомендуют
+                    администрации районов и
+                    областей
+                </p>
+                <p class="digit__info">
+                    Администрации рекомендуют
+                    своим подотчетным
+                    предприятиям сотрудничать с
+                    нами по многим направлениям
+                </p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d5.png" alt="digit_info">
+                <p class="digit__title">
+                    Более 200 публичных
+                    выступлений
+                </p>
+                <p class="digit__info">
+                    Наши специалисты и технологи
+                    настолько круты, что их часто
+                    приглашают выступить на
+                    семинарах, конференциях
+                </p>
+            </div>
+
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d8.png" alt="digit_info">
+                <p class="digit__title">
+                    Экскурсия на ферму в
+                    Европу
+                </p>
+                <p class="digit__info">
+                    Бесплатно свозим на
+                    фермерское хозяйство одной из
+                    стран Европы
+                </p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d9.png" alt="digit_info">
+                <p class="digit__title">
+                    Вебкамеры на объекте
+                </p>
+                <p class="digit__info">
+                    Установим бесплатно на
+                    объекте вебкамеры
+                </p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d9.png" alt="digit_info">
+                <p class="digit__title">
+                    Огромный опыт
+                </p>
+                <p class="digit__info">
+                    Приближаемся к первому
+                    1'000'000 погонных метров
+                </p>
+            </div>
+
+            <div class="digit__item">
+                <img class="digit__img" src="./img/digit/d11.png" alt="digit_info">
+                <p class="digit__title">
+                    Гарантия от подскальзываний
+                </p>
+                <p class="digit__info">
+                    Мы вернем деньги,
+                    если технология не будет работать
+                </p>
+            </div>
+
+
+
+        </div>
     </section>
 </div>
 
