add section warning and technology

--- a/index.html
+++ b/index.html
@@ -811,6 +811,44 @@
     </div>
 </section>
 
+<section class="warning">
+    <div class="wrapper-2">
+        <p class="warning__title">ОСТОРОЖНО!</p>
+        <p class="warning__text">
+            В связи с частыми случаями попытки скопировать технологию, заказать у непрофессионалов не обладающих или достаточной квалификацией, или оборудованием.
+        </p>
+        <p class="warning__text">
+            На каждом объекте швы нарезаются с определенной частотой, в определенном направлении. Существует множество факторов от которых зависит технология нанесения канавок на бетонные полы в коровнике: от направления движения коров, их активности, наличия в коровнике разгонных вентиляторов, чесалок и конечно их расположения.
+        </p>
+        <p class="warning__text">
+            Также немаловажным фактором является глубина самих канавок, она не должна быть менее 12 мм, но при этом и не должна быть более 20мм. Это может существенно отразится на самой технологии. Ооочень важно соблюсти и технологию резки самого бетона, не каждое оборудование позволит не скрошится краям канавки во время нарезки или штробления бетона. Если края скрошатся, и не будут острыми, то это даст ощутимый эффект на два года без скрепера, и приблизительно на один год со скреперной системой. Но далее начнутся проблемы, и приблизительно уже через такой же промежуток времени случаи падения, подскальзывания или как еще говорят, когда коровы рвутся, участятся, причем станут чаще по сравнению с этапом, когда было создано антискользящее покрытие в коровнике. А все из-за того что целостность бетона будет нарушена, он станет неровным, и благодаря подобным неровностям сумма которую вы будете вынуждены потратить на восстановление может составить 3-4 бюджета от суммы создания правильной нарезки швов.
+        </p>
+        <p class="warning__text">
+            Также не менее важна и ширина канавок, в случае если она будет менее 14-15мм мы не сможем гарантировать вам, что коровы перестанут подскальзываться. Потому что технологически, канавки в бетоне такой ширины могут позволять копытам коров разъезжаться, не обращая внимание на их наличие. Канавки уже чем 14-15мм будут забиваться, и со временем их будет невозможно вымыть, канавки же более широкие сами собой будут вымываться. Эта технология была рекомендована впервые всем сельскохозяйственным предприятиям Канады еще в далеком 1987 году Институтом сельского хозяйства как самая эффективная и экономически целесообразная. Позднее эта технология распространилась по Америке далее Европе, а позднее и всему миру. Сегодня подавляющее большинство ферм имеют такие полы, и еще на этапе проектирования коровника или фермы предусматривается именно нескользящий пол. Эта технология уже годы работает, и не меняется с тех пор. По подобным полам в коровнике ходят животные в Америке, Канаде и Европе и дают превосходные надои, не подскальзываясь, не испытывая стресса.
+        </p>
+        <p class="warning__text">
+            Если у вас есть коровник на 200, 400, 600, 800 и более голов и вам интересно узнать критерии выявления непрофессионала – оставьте заявку и вам на почту придет статья, которая поможет вам избавиться и отсеять недоброкачественных подрядчиков. После прочтения этой статьи вы сможете разбираться больше, а значит и лучше большинства своих подрядчиков.
+
+            Также бонусом вы получите «10 вопросов, которые нужно задать подрядчику», которого вы собираетесь выбрать.
+        </p>
+        <button class="warning__btn small-btn-style">Получить консультацию</button>
+    </div>
+</section>
+
+<section class="technology wrapper-2">
+    <p class="technology__text">
+        Технология создания антискользящего покрытия родилась не сама собой, и не мы её изобрели. Тут нам нечего скрывать и нечего стыдиться. Сегодня доподлинно не известно когда именно и кем она была изобретена, однако мы знаем точно , что в 1984 году Канадский сельскохозяйственный университет рекомендовал разработанную и проверенную технологию нарезки швов в бетонных полах как наиболее выгодную и наименее затратную технологию и способ для предотвращения подскальзываний у коров. Во время исследований ученые обратили внимание, что этот способ избавляет не только от подскальзываний. Нескользкий для животных пол создавал комфорт для коров, а вместе с комфортом животные свободнее передвигались, без боязни упасть, больше ели и пили, тем самым увеличивая надои молока и общую рентабельность фермы. Стало легче выявлять период охоты у коров, чтобы успевать вовремя покрыть животных.
+    </p>
+    <p class="technology__text">
+        Естественно эта технология сравнивалась с имеющимися на тот момент решениями, такими как коврики в проходах коровника, или маты возле поилок, с наливными полами или эпоксидными покрытиями пола, с резиновыми плитами. Было рассмотрено множество вариаций устройства полов в коровнике. Рассматривались фермерские хозяйства с различным поголовьем, и 200, и 400, и 600, и 800 голов. Да, хозяйства, которые много зарабатывают, могут себе позволить застелить все проходы и галереи резиновыми ковриками. Однако уже тогда Канадский институт опытным путем выяснил и доказал, что коврики менее эффективны, чем антискользящее покрытие.
+    </p>
+    <p class="technology__text">
+        Мы тоже не сразу пришли к созданию канавок и штроблению бетонного пола насечками в коровнике. Мы были одними из тех, кто предлагал различные вариации резиновых ковриков для коров, и маленькие квадратные коврики, и пазловые резиновые коврики, с разной толщиной этих ковриков (или иногда называемых резиновыми матами).
+    </p>
+    <p class="technology__text">
+        Да, это не секрет, что есть множество организаций, компаний и проектных институтов, которые могут вам предложить не только проектирование и строительство коровников в общем понятии этих слов, однако более детальными, инновационными или технически грамотными и простыми решениями многие не смогут похвастать. Именно неопытные или неразвивающиеся компании и организации при проектировании не будут уделять устройству полов в коровнике должного внимания. Будьте осторожны и внимательны! Для строительства коровника недостаточно скачать проект бесплатно из интеренета, вам не выдаст ни один поисковик грамотного устройства полов. Зато множество компаний наперебой будут продавать для крс резиновые полы, резиновые экоплиты, наливные полы. Они не думают о вашей выгоде, и не будут считать ваши деньги. Они просто хотят продать вам коврики (они же маты для крс).
+    </p>
+</section>
 
 
 <script src="./js/main.js"></script>
