--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--    <link rel="shortcut icon" href="./img/icon/icon-logo.png" type="image/png">-->
-    <title>Atlantida</title>
+    <title>Забота</title>
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -18,7 +18,7 @@
     <header class="header">
 
         <div class="social">
-            <h2>Бюро Миши</h2>
+            <h1>Забота</h1>
             <p class="social__info">Работаем по всей РБ и странам СНГ</p>
             <div class="social__contact">
                 <a href="tel:+375333307321">+375(33)-330-73-21</a>
@@ -29,13 +29,13 @@
 
             <div class="social-networks">
                 <a class="social-networks__whatsapp social-networks__wr"
-                   href="https://api.whatsapp.com/send?phone=+375336429195">
+                   href="https://api.whatsapp.com/send?phone=+375333307321">
                     <img src="./img/icon/whatsapp.png" alt="whatsapp-img">
                 </a>
-                <a class="social-networks__telegram social-networks__wr" href="https://t.me/Alekseyfgl">
+                <a class="social-networks__telegram social-networks__wr" href="https://t.me/hoofmart">
                     <img src="./img/icon/telegram.png" alt="">
                 </a>
-                <a class="social-networks__viber social-networks__wr" href="viber://chat?number=%2B79660107669">
+                <a class="social-networks__viber social-networks__wr" href="viber://chat?number=%2B333307321">
                     <img src="./img/icon/viber.png" alt="viber-img">
                 </a>
             </div>
@@ -55,7 +55,7 @@
 
     <div class="content-main wr-content border-main-content">
         <div class="content-main__text">
-            <h1 class="content-main__title">Нарезаем швы в бетоне уже через<span>7 дней</span></h1>
+            <h2 class="content-main__title">Нарезаем швы в бетоне уже через<span>7 дней</span></h2>
             <p class="content-main__sub-title">С расширенной гарантией: бесплатный сервис, и пожизненная
                 гарантия
                 99% от растяжения свяок у коров</p>
@@ -850,6 +850,48 @@
     </p>
 </section>
 
+<section class="technology wrapper-2">
+    <p class="technology__text">
+        Технология создания антискользящего покрытия родилась не сама собой, и не мы её изобрели. Тут нам нечего скрывать и нечего стыдиться. Сегодня доподлинно не известно когда именно и кем она была изобретена, однако мы знаем точно , что в 1984 году Канадский сельскохозяйственный университет рекомендовал разработанную и проверенную технологию нарезки швов в бетонных полах как наиболее выгодную и наименее затратную технологию и способ для предотвращения подскальзываний у коров. Во время исследований ученые обратили внимание, что этот способ избавляет не только от подскальзываний. Нескользкий для животных пол создавал комфорт для коров, а вместе с комфортом животные свободнее передвигались, без боязни упасть, больше ели и пили, тем самым увеличивая надои молока и общую рентабельность фермы. Стало легче выявлять период охоты у коров, чтобы успевать вовремя покрыть животных.
+    </p>
+    <p class="technology__text">
+        Естественно эта технология сравнивалась с имеющимися на тот момент решениями, такими как коврики в проходах коровника, или маты возле поилок, с наливными полами или эпоксидными покрытиями пола, с резиновыми плитами. Было рассмотрено множество вариаций устройства полов в коровнике. Рассматривались фермерские хозяйства с различным поголовьем, и 200, и 400, и 600, и 800 голов. Да, хозяйства, которые много зарабатывают, могут себе позволить застелить все проходы и галереи резиновыми ковриками. Однако уже тогда Канадский институт опытным путем выяснил и доказал, что коврики менее эффективны, чем антискользящее покрытие.
+    </p>
+    <p class="technology__text">
+        Мы тоже не сразу пришли к созданию канавок и штроблению бетонного пола насечками в коровнике. Мы были одними из тех, кто предлагал различные вариации резиновых ковриков для коров, и маленькие квадратные коврики, и пазловые резиновые коврики, с разной толщиной этих ковриков (или иногда называемых резиновыми матами).
+    </p>
+    <p class="technology__text">
+        Да, это не секрет, что есть множество организаций, компаний и проектных институтов, которые могут вам предложить не только проектирование и строительство коровников в общем понятии этих слов, однако более детальными, инновационными или технически грамотными и простыми решениями многие не смогут похвастать. Именно неопытные или неразвивающиеся компании и организации при проектировании не будут уделять устройству полов в коровнике должного внимания. Будьте осторожны и внимательны! Для строительства коровника недостаточно скачать проект бесплатно из интеренета, вам не выдаст ни один поисковик грамотного устройства полов. Зато множество компаний наперебой будут продавать для крс резиновые полы, резиновые экоплиты, наливные полы. Они не думают о вашей выгоде, и не будут считать ваши деньги. Они просто хотят продать вам коврики (они же маты для крс).
+    </p>
+</section>
+
+<section class="footer">
+    <div class=" wrapper-2">
+        <div class="footer__items">
+            <div class="footer__item item-1 information">
+                <ul>
+                    <li class="footer__text">Информация</li>
+                    <li class="footer__text">
+                        <a href="#">Типы покрытия</a>
+                    </li>
+                    <li class="footer__text">
+                    <li class="footer__text">
+                        <a href="#">Наши работы</a>
+                    </li>
+                    <li class="footer__text">
+                        <a href="#">Стоимость</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__item item-2 contacts">
+                <a href="tel:+375333307321">+375(33)-330-73-21</a>
+                <a href="mailto:qqqqq@mal.ru">aleksey@mail.ru</a>
+                <button class="footer__btn small-btn-style">Заказать звонок</button>
+            </div>
+        </div>
+    </div>
+
+</section>
 
 <script src="./js/main.js"></script>
 <script src="./js/fslightbox.js"></script>
