--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
             <div class="social-networks">
                 <a class="social-networks__whatsapp social-networks__wr"
-                   href="https://api.whatsapp.com/send?phone=+375333307321">
+                   href="https://api.whatsapp.com/send?phone=%2B375333307321">
                     <img src="./img/icon/whatsapp.png" alt="whatsapp-img">
                 </a>
                 <a class="social-networks__telegram social-networks__wr" href="https://t.me/hoofmart">
                     <img src="./img/icon/telegram.png" alt="">
                 </a>
-                <a class="social-networks__viber social-networks__wr" href="viber://chat?number=%2B333307321">
+                <a class="social-networks__viber social-networks__wr" href="viber://chat?number=%2B375333307321">
                     <img src="./img/icon/viber.png" alt="viber-img">
                 </a>
             </div>
