--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="social__info wr-text">Работаем по всей РБ и странам СНГ</p>
             <div class="social__contact">
                 <a href="tel:+375333307321">+375(33)-330-73-21</a>
-                <a href="mailto:qqqqq@mal.ru">aleksey@mail.ru</a>
+                <a href="mailto:Mmerzlyackov@mail.ru">Mmerzlyackov@mail.ru</a>
             </div>
 
             <button class='request-call btn-style'>Заказать звонок</button>
