--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
             </div>
             <div class="footer__item item-2">
                 <a href="tel:+375333307321">+375(33)-330-73-21</a>
-                <a href="mailto:qqqqq@mal.ru">aleksey@mail.ru</a>
+                <a href="mailto:Mmerzlyackov@mail.ru">Mmerzlyackov@mail.ru</a>
                 <button class="footer__btn small-btn-style">Заказать звонок</button>
             </div>
         </div>
