--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             </div>
         </div>
 
-        <nav >
+        <nav>
             <ul class="navigation">
-                <li><a href="#">Типы антискользящего покрытия</a></li>
-                <li><a href="#">Стоимость</a></li>
-                <li><a href="#">Наши работы</a></li>
+                <li><a href="#types">Типы антискользящего покрытия</a></li>
+                <li><a href="#order">Стоимость</a></li>
+                <li><a href="#works">Наши работы</a></li>
                 <li><a href="#">Средства для ухода и лечения копыт у коров</a></li>
                 <li><a href="#">Обрезка и лечение кожи и копыт у коров</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="#contact">Контакты</a></li>
             </ul>
         </nav>
     </header>
@@ -101,7 +101,8 @@
             <p class="content-main__title-for-message">Оставь номер телефона, чтобы узнать как гарантированно
                 остановить ежемесячные растяжки коров</p>
             <form class="content-main__wr-message">
-                <input class="content-main__phone" type="tel" placeholder="+375(33) 543-23-45"  pattern="(?:\+|\d)[\d\-\(\) ]{9,}\d">
+                <input class="content-main__phone" type="tel" placeholder="+375(33) 543-23-45"
+                       pattern="(?:\+|\d)[\d\-\(\) ]{9,}\d">
                 <button class="content-main__send-phone btn-style">Остановить растяжки</button>
             </form>
         </div>
@@ -126,7 +127,7 @@
     </div>
 </section>
 
-<section class="founder wrapper-2">
+<section id="founder" class="founder wrapper-2">
     <h3 class="founder__company">ОСНОВАТЕЛЬ КОМПАНИИ</h3>
     <div class="founder__wr-img">
         <img class="founder__img" src="./img/director/founder.jpg" alt="photo-michail">
@@ -142,7 +143,7 @@
         тему содержания КРС и повышению надоев.</p>
 </section>
 
-<section class="digit wrapper-2">
+<section id="digit" class="digit wrapper-2">
     <div class="digit__items">
 
         <div class="digit__item">
@@ -265,7 +266,7 @@
 
 <section class="types-coverings">
     <div class="wrapper-2">
-        <h2 class="types-coverings__title">ТИПЫ АНТИСКОЛЬЗЯЩЕГО ПОКРЫТИЯ</h2>
+        <h2 class="types-coverings__title" id="types">ТИПЫ АНТИСКОЛЬЗЯЩЕГО ПОКРЫТИЯ</h2>
         <p class="types-coverings__description">
             Мы поможем вам выбрать подходящий тип Антискользящего покрытия, исходя из вашего
             географического положения, бюджета и пожеланий
@@ -483,7 +484,6 @@
 
 </section>
 
-<!-- History -->
 <section id="history" class="history wrapper mobile ">
     <div class="wrapper">
         <div class="sub-wrapper-history .sub-wr">
@@ -571,7 +571,7 @@
     </div>
 </section>
 
-<section class="order">
+<section id="order" class="order">
     <div class="wrapper-2">
         <div class="order-cost-calculation">
             <h2 class="order-cost-calculation__title">РАСЧЁТ СТОИМОСТИ ПРОЕКТА</h2>
@@ -634,8 +634,7 @@
     </div>
 </section>
 
-
-<section class="works wrapper-2">
+<section id="works" class="works wrapper-2">
     <h2 class="works__title">НАШИ РАБОТЫ</h2>
 
     <div class="works__items">
@@ -854,7 +853,7 @@
     </div>
 </section>
 
-<section class="warning">
+<section id="warning" class="warning">
     <div class="wrapper-2">
         <p class="warning__title">ОСТОРОЖНО!</p>
         <p class="warning__text">
@@ -904,7 +903,7 @@
     </div>
 </section>
 
-<section class="technology wrapper-2">
+<section id="technology" class="technology wrapper-2">
     <p class="technology__text">
         Технология создания антискользящего покрытия родилась не сама собой, и не мы её изобрели. Тут нам нечего
         скрывать и нечего стыдиться. Сегодня доподлинно не известно когда именно и кем она была изобретена, однако мы
@@ -941,9 +940,7 @@
     </p>
 </section>
 
-
-
-<section class="footer">
+<section id="contact" class="footer">
     <div class=" wrapper-2">
         <div class="footer__items">
             <div class="footer__item item-1">
