--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li><a href="#works">Наши работы</a></li>
                 <li><a href="#">Средства для ухода и лечения копыт у коров</a></li>
                 <li><a href="#">Обрезка и лечение кожи и копыт у коров</a></li>
-                <li><a href="#contact">Контакты</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul>
         </nav>
     </header>
@@ -940,7 +940,7 @@
     </p>
 </section>
 
-<section id="contact" class="footer">
+<section id="contacts" class="footer">
     <div class=" wrapper-2">
         <div class="footer__items">
             <div class="footer__item item-1">
